# ayuda-venezuela-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/diagnostics/: route-bundle-stats.json
.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: _global-error.html  _global-error.rsc  _not-found.html  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
.next/server/chunks/: [root-of-the-server]__0zuxxt2._.js  [root-of-the-server]__0zuxxt2._.js.map
.next/server/pages/: 404.html  500.html
.next/static/chunks/: 3-rb0vbutfazw.js  39ub7c-3-ru4s.css  3h-yla_mdu2qw.js  409_h2xnvid7j.js  (+1 more)
app/: globals.css  layout.tsx
bot/: README.md  __main__.py  bot.py  serve_sos_mcp.py
components/: api-endpoints.tsx  bring-your-source.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  icons.tsx  powered-by.tsx
landing/app/: page.tsx
landing/components/: bring-your-source.tsx  header.tsx  what-you-can-ask.tsx
lib/: i18n.ts
site/: README.md  index.html
tests/: conftest.py  test_agent.py  test_bot.py  test_config.py  test_providers.py  test_surfcall_tools.py
(+55 files in other folders)
